# serializer version: 1
# name: test_light_setup_ultima[light.mock_title_ambilight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'Solid',
        'Off',
        'Blur',
        'Rainbow',
        'Breathing',
        'Color Wipe',
        'Comet',
        'Fire',
        'Twinkle',
        'Police',
        'Chase',
        'Color Cycle',
        'Gradient Scroll',
        'Strobe',
        'System Warning',
        'System Error',
        'System OK',
        'System Info',
      ]),
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.mock_title_ambilight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ambilight',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:led-strip',
    'original_name': 'Ambilight',
    'platform': 'smlight',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 4>,
    'translation_key': 'ambilight',
    'unique_id': 'aa:bb:cc:dd:ee:ff-ambilight',
    'unit_of_measurement': None,
  })
# ---
# name: test_light_setup_ultima[light.mock_title_ambilight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': None,
      'effect': None,
      'effect_list': list([
        'Solid',
        'Off',
        'Blur',
        'Rainbow',
        'Breathing',
        'Color Wipe',
        'Comet',
        'Fire',
        'Twinkle',
        'Police',
        'Chase',
        'Color Cycle',
        'Gradient Scroll',
        'Strobe',
        'System Warning',
        'System Error',
        'System OK',
        'System Info',
      ]),
      'friendly_name': 'Mock Title Ambilight',
      'hs_color': None,
      'icon': 'mdi:led-strip',
      'rgb_color': None,
      'supported_color_modes': list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      'supported_features': <LightEntityFeature: 4>,
      'xy_color': None,
    }),
    'context': <ANY>,
    'entity_id': 'light.mock_title_ambilight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
